ScrollBar Issue Fixed

--- a/packages/react-app/src/components/chat/w2wChat/chatBox/chatBox.css
+++ b/packages/react-app/src/components/chat/w2wChat/chatBox/chatBox.css
@@ -67,17 +67,14 @@
   font-weight: 400;
   opacity: 0.8;
 }
-.chatBoxTop::-webkit-scrollbar {
+.chatBoxTop div::-webkit-scrollbar {
   width: 5px;
+  /* display: none; */
 }
 
-.chatBoxTop::-webkit-scrollbar-track {
-  background: #ffffff;
-  border-radius: 10px;
-  opacity: 0.5;
-}
 
-.chatBoxTop::-webkit-scrollbar-thumb {
+.chatBoxTop div::-webkit-scrollbar-thumb {
+  background: #cf1c84;
   border-radius: 10px;
   background-image: transparent;
 }
@@ -165,15 +162,13 @@
   cursor: pointer;
 }
 .chatBoxTop {
-  height: 65%;
-  overflow-y: scroll;
-  padding-top: 9vh;
   padding-right: 0px;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
   margin: 0 2px;
 }
+
 
 .beforeMessageLoader {
   display: flex;
